@@ -1,3 +1,10 @@
+2005-08-12  Yves Combe  <yves@ycombe.net>
+
+	improve boards selection: now menu selection follow childs.
+
+	* po/Makefile.in.in:
+	* src/boards/python/admin/board_list.py:
+
 2005-08-04  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Improved by Yves. Now there is a by level filtering. 
